fix  overflow  bugs

--- a/styles/about.css
+++ b/styles/about.css
@@ -414,7 +414,7 @@ body{
   
 img.blob{
     filter: blur(200px);
-    width: 500px;
+    width: 300px;
     z-index: -1;
     user-select: none;
 }
@@ -810,7 +810,7 @@ label svg.moon{
 header{
   padding: 14rem 0 10rem;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 header .section__title::before{
