--- a/styles/contact.css
+++ b/styles/contact.css
@@ -415,7 +415,7 @@ body{
   
 img.blob{
     filter: blur(200px);
-    width: 500px;
+    width: 300px;
     z-index: -1;
     user-select: none;
 }
@@ -810,7 +810,7 @@ nav {
 header{
   padding: 14rem 0 10rem;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 header .section__title::before{
