--- a/styles/style.css
+++ b/styles/style.css
@@ -1250,6 +1250,10 @@ label svg.moon{
   transition: all .5s;
 }
 
+.dark__bg .info__modal{
+  background-color: #333333e0;
+}
+
 .open__info-modal .info__modal{
   opacity: 1;
   visibility: visible;
@@ -1324,6 +1328,10 @@ label svg.moon{
 
 .close__info-modal:hover{
   color: #333;
+}
+
+.dark__bg .close__info-modal:hover{
+  color: #fff;
 }
 
 /* header */
@@ -1455,6 +1463,7 @@ header .blob:nth-child(2){
 /* products slider */
 
 .product__slider{
+  margin-top: 6rem;
   max-width: 100vw;
   width: 100%;
   /* min-height: 400px; */
